src/resources/text/DBML_Grammar.txt
Correct First and Follow grammar: http://hackingoff.com/compilers/predict-first-follow-set

CONTAINERS -> CONTAINER | CONTAINER CONTAINERS
CONTAINER -> TABLE | ENUM | REF | EPSILON
TABLE -> Table name { TABLE_CONTENT }
TABLE_CONTENT -> TABLE_ROW | TABLE_ROW TABLE_CONTENT | EPSILON
TABLE_ROW -> name TYPE | name TYPE pk | name ENUM_TYPE
ENUM -> Enum ENUM_TYPE { ENUM_CONTENT }
ENUM_CONTENT -> ENUM_ROW | ENUM_ROW ENUM_CONTENT
ENUM_ROW -> name [ note: name ]
REF -> ref
